# PackMesh-Sample-Apps

./: README.md  package-lock.json  package.json
apps/sample-cpp/: CMakeLists.txt  README.md
apps/sample-cpp/src/: main.cpp
apps/sample-dotnet/: .env.example  App.razor  Program.cs  README.md  _Imports.razor  sample-dotnet.csproj
apps/sample-dotnet/Pages/: Index.razor
apps/sample-dotnet/Services/: PackMeshClient.cs
apps/sample-dotnet/wwwroot/: index.html
apps/sample-java/: README.md  pom.xml
apps/sample-java/src/main/java/com/packmesh/samplejava/: SampleJavaApplication.java  WebController.java
apps/sample-java/src/main/resources/templates/: index.html
apps/sample-py/: README.md  app.py  packmesh_client.py
apps/sample-ts/: .env.example  README.md  next.config.js  package.json
apps/sample-ts/app/: globals.css  layout.tsx  page.tsx
apps/sample-ts/lib/: packmeshClient.ts
site/: index.html  robots.txt  sitemap.xml  styles.css
site/apps/: sample-cpp.html  sample-dotnet.html  sample-java.html  sample-py.html  sample-ts.html
